# Artem

./: .gitignore  .gitmodules  CMakeLists.txt  GraphicalInterface.cpp  New_York.cpp  README.md  Sample.cpp  Testbigfile.cpp  Testmisc.cpp  bash.exe.stackdump  config.txt  hhh.cpp  lol.cpp  main.c  main.cpp  name.txt  network_interface.cpp  onvpotoke.cpp  pthreadtest.cpp  readerfile.cpp  struct.cpp  united.cpp
libraries/: CMakeLists.txt
libraries/DFT/: CMakeLists.txt
libraries/DFT/cmake/: Installing.cmake
libraries/DFT/include/: DFT.hpp
libraries/DFT/src/: DFT.cpp
libraries/imgui-w/: CMakeLists.txt
libraries/implot-w/: CMakeLists.txt  CmakeLists.txt
libraries/parse_stream/: CMakeLists.txt
libraries/parse_stream/include/: DFT.hpp  hell.hpp
libraries/parse_stream/src/: hell.cpp
